--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,3 +24,9 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.40.0
 woodwide==0.4.0
+pandas>=2.0.0
+numpy>=1.24.0
+opencv-python>=4.8.0
+rtmlib>=0.0.10
+onnxruntime-gpu>=1.16.0
+tqdm>=4.65.0
