--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,32 +1,68 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aioice==0.10.2
+aiortc==1.14.0
+aiosignal==1.4.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+attrs==25.4.0
+av==16.1.0
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
+coloredlogs==15.0.1
+cryptography==46.0.3
 distro==1.9.0
+dnspython==2.8.0
 dotenv==0.9.9
 fastapi==0.128.0
+flatbuffers==25.12.19
+frozenlist==1.8.0
+google-crc32c==1.8.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+humanfriendly==10.0
 idna==3.11
+ifaddr==0.2.0
+mpmath==1.3.0
+multidict==6.7.0
+numpy==2.4.1
+onnxruntime==1.23.2
+onnxruntime-gpu==1.23.2
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+packaging==25.0
+pandas==2.3.3
+propcache==0.4.1
+protobuf==6.33.4
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
+pyee==13.0.0
+pylibsrtp==1.0.0
+pyOpenSSL==25.3.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.21
+pytz==2025.2
 requests==2.32.5
+rtmlib==0.0.14
+six==1.17.0
 sniffio==1.3.1
 starlette==0.50.0
+sympy==1.14.0
+tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.3
 uvicorn==0.40.0
 woodwide==0.4.0
-pandas>=2.0.0
-numpy>=1.24.0
-opencv-python>=4.8.0
-rtmlib>=0.0.10
-onnxruntime-gpu>=1.16.0
-tqdm>=4.65.0
+yarl==1.22.0
+pytest==8.2.2
+pytest-asyncio==0.23.8
