--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.11.0+2
   flutter_riverpod: ^3.2.0
   flutter_webrtc: ^1.2.1
   http: ^1.6.0
+  path_provider: ^2.1.2
   permission_handler: ^12.0.1
+  video_player: ^2.8.6
   web_socket_channel: ^3.0.3
 
 dev_dependencies:
@@ -22,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - static/walking.mp4
