--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_riverpod: ^3.2.0
   flutter_webrtc: ^1.2.1
   http: ^1.6.0
+  image: ^4.1.3
   path_provider: ^2.1.2
   permission_handler: ^12.0.1
   video_player: ^2.8.6
