--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   image: ^4.1.3
   path_provider: ^2.1.2
   permission_handler: ^12.0.1
+  sqflite: ^2.3.2
   video_player: ^2.8.6
   web_socket_channel: ^3.0.3
 
