--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_blue_plus: ^1.35.0
   flutter_riverpod: ^3.2.0
   flutter_webrtc: ^1.2.1
+  google_fonts: ^6.1.0
   http: ^1.6.0
   image: ^4.1.3
   path_provider: ^2.1.2
