--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.11.0+2
+  fl_chart: ^1.1.0
   flutter_blue_plus: ^1.35.0
   flutter_riverpod: ^3.2.0
   flutter_webrtc: ^1.2.1
