--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.11.0+2
   fl_chart: ^1.1.0
   flutter_blue_plus: ^1.35.0
   flutter_riverpod: ^3.2.0
@@ -22,6 +21,7 @@ dependencies:
   sqflite: ^2.3.2
   video_player: ^2.8.6
   web_socket_channel: ^3.0.3
+  camerawesome: ^2.5.0
 
 dev_dependencies:
   flutter_test:
