--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -27,8 +27,32 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_native_splash: ^2.3.10
+  flutter_launcher_icons: ^0.14.3
 
 flutter:
   uses-material-design: true
   assets:
     - static/walking.mp4
+    - assets/img/
+
+flutter_native_splash:
+  # Required: Set a background color (hex format) or use background_image
+  color: "#FFFFFF" 
+  # Optional: Specify an image asset
+  image: assets/img/splash.png
+  # Optional: Set to true if you want a fullscreen splash screen
+  # fullscreen: true
+
+  # Optional: Android 12+ specific configuration (see package docs for details)
+  # android_12:
+  #   image: assets/images/splash_logo_android12.png
+  #   color: "#FFFFFF"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/icon.png"
+  # For Android Adaptive Icons (Optional but recommended)
+  adaptive_icon_background: "#ffffff" # or image path
+  adaptive_icon_foreground: "assets/img/icon.png"
