--- a/Flutter/flutter_application/pubspec.yaml
+++ b/Flutter/flutter_application/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   video_player: ^2.8.6
   web_socket_channel: ^3.0.3
   camerawesome: ^2.5.0
+  rename_app: ^1.6.5
 
 dev_dependencies:
   flutter_test:
